
syntax = "proto3";

package hello;

option go_package="./scrape_client/scrapepb";

message Product {
  string name = 1;
  string url = 2;
  string price = 3;
  string imgUrl = 4;
  repeated string regionList = 5;
}

message Result {
  string productName = 1;
  string productUrl = 2;
  string productPrice = 3;
  string productImgUrl = 4;
  repeated string productRegionList = 5;
  string storeName = 6;
  string storeAddress = 7;
  float storeLat = 8;
  float storeLon = 9;
}

message StoreInfo {
  string name = 1;
  float storeLat = 2;
  float storeLon = 3;
}

message ScrapeManyTimesRequest {
  string productName = 1;
  float userLat = 2;
  float userLon = 3;
}

message ScrapeManyTimesResponse {
  Result result = 1;
  string message = 2;
}


service ScrapingService {
  rpc ScrapeManyTimes (ScrapeManyTimesRequest) returns (stream ScrapeManyTimesResponse) {}
}